--- a/.github/workflows/changelog.yml
+++ b/.github/workflows/changelog.yml
@@ -15,10 +15,8 @@ jobs:
         with:
           github-token: ${{secrets.GITHUB_TOKEN}}
           script: |
-            console.log(context)
+            console.log(process.env)
             const diff_url = context.payload.pull_request.diff_url
-            const result = await github.request(diff_url)
-            console.log(result)
             return {buildtool: true, coregem: true}
 
       - name: Comment on build tools change log
