--- a/.github/workflows/changelog.yml
+++ b/.github/workflows/changelog.yml
@@ -10,23 +10,25 @@ jobs:
         with:
           githubToken: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Dump steps context
-        env:
-          STEPS_CONTEXT: ${{ toJson(steps) }}
-          FILES_MODIFIED: ${{ steps.file_changes.outputs.files_modified }}
-        run: echo "$STEPS_CONTEXT"
-
       - name: detect change scope
+        id: change_scope
         uses: actions/github-script@0.8.0
         env:
-          STEPS_CONTEXT: ${{ toJson(steps) }}
           FILES_ADDED: ${{ steps.file_changes.outputs.files_added }}
+          FILES_MODIFIED: ${{ steps.file_changes.outputs.files_modified }}
+          FILES_DELETED: ${{ steps.file_changes.outputs.files_deleted }}
+
         with:
           github-token: ${{secrets.GITHUB_TOKEN}}
           script: |
             console.log(process.env)
+            console.log("----------------")
+            console.log(JSON.parse(process.env.FILES_ADDED))
             const diff_url = context.payload.pull_request.diff_url
             return {buildtool: true, coregem: true}
+
+      - name: Get the output time
+        run: echo "The time was ${{ steps.change_scope.outputs.result }}"
 
       - name: Comment on build tools change log
         uses: thollander/actions-comment-pull-request@master
