--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -5,6 +5,9 @@ jobs:
     runs-on: ubuntu-latest
     name: A job to say hello
     steps:
+    - name: Checkout repo
+      uses: actions/checkout@v2
+
     - name: Hello world action step
       id: hello
       uses: alextwoods/changelog-action@master
