--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -8,7 +8,7 @@ jobs:
     - name: Checkout repo
       uses: actions/checkout@v2
 
-    - name: Hello world action step
+    - name: Analyze and validate changes
       id: hello
       uses: alextwoods/changelog-action@master
       with:
