Remove the docker and JS script options - go with the simplest.

--- a/.github/workflows/changelog_github_scope.yml
+++ b/.github/workflows/changelog_github_scope.yml
@@ -1,15 +1,16 @@
 on:
   pull_request:
     paths:
-      - 'gems/aws-sdk-core/**/*.rb'
+    - 'gems/aws-sdk-core/**/*.rb'
+    - '!gems/aws-sdk-core/CHANGELOG.md'
 
 jobs:
   changelog_comment_pr:
     runs-on: ubuntu-latest
     name: Comment on Changelog requires
     steps:
-      - name: Comment PR with dynamic message
+      - name: Comment PR
         uses: thollander/actions-comment-pull-request@master
         with:
-          message: 'Consider adding a changelog entry'
+          message: 'Youve made a change to core without a coorisponding change to the CHANGELOG.md.  This change will not result in a new version and will not published unless an entry is added to CHANGELOG.md'
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
