--- a/.github/workflows/changelog_github_scope.yml
+++ b/.github/workflows/changelog_github_scope.yml
@@ -2,16 +2,20 @@ on:
   pull_request:
     paths:
     - 'gems/aws-sdk-core/**/*.rb'
-    paths-ignore:
-    - 'gems/aws-sdk-core/CHANGELOG.md'
 
 jobs:
   changelog_comment_pr:
     runs-on: ubuntu-latest
     name: Comment on Changelog requires
     steps:
+      - id: file_changes
+        uses: trilom/file-changes-action@v1
+        with:
+          githubToken: ${{ secrets.GITHUB_TOKEN }}
+
       - name: Comment PR
         uses: thollander/actions-comment-pull-request@master
+        if: !contains(steps.file_changes.outputs.files_modified, 'gems/aws-sdk-core/CHANGELOG.md')
         with:
           message: 'Youve made a change to core without a coorisponding change to the CHANGELOG.md.  This change will not result in a new version and will not published unless an entry is added to CHANGELOG.md'
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
