--- a/.github/workflows/changelog_github_scope.yml
+++ b/.github/workflows/changelog_github_scope.yml
@@ -14,7 +14,7 @@ jobs:
           githubToken: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Comment PR
-        if: !contains(steps.file_changes.outputs.files_modified, 'gems/aws-sdk-core/CHANGELOG.md')
+        if: ${{!contains(steps.file_changes.outputs.files_modified, 'gems/aws-sdk-core/CHANGELOG.md')}}
         uses: thollander/actions-comment-pull-request@master
         with:
           message: 'Youve made a change to core without a coorisponding change to the CHANGELOG.md.  This change will not result in a new version and will not published unless an entry is added to CHANGELOG.md'
